--- a/backend/package.json
+++ b/backend/package.json
@@ -85,8 +85,9 @@
     "vary": "^1.1.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+   test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js","build": "npm rebuild"
+
   },
   "keywords": [],
   "author": "",
