--- a/backend/package.json
+++ b/backend/package.json
@@ -85,7 +85,7 @@
     "vary": "^1.1.2"
   },
   "scripts": {
-   test": "echo \"Error: no test specified\" && exit 1",
+   "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js","build": "npm rebuild"
 
   },
