--- a/backend/package.json
+++ b/backend/package.json
@@ -86,7 +86,8 @@
   },
   "scripts": {
    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js","build": "npm rebuild"
+    "start": "node server.js",
+    "build": "npm run build"
 
   },
   "keywords": [],
