--- a/backend/package.json
+++ b/backend/package.json
@@ -87,7 +87,7 @@
   "scripts": {
    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "build": "npm run build"
+    "build": "react-scripts build"
 
   },
   "keywords": [],
