--- a/backend/package.json
+++ b/backend/package.json
@@ -87,7 +87,7 @@
   "scripts": {
    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "build": "echo 'No build step required for plain JavaScript backend"
+    "build": "echo 'No build step required for plain JavaScript backend'"
 
   },
   "keywords": [],
